[package]
name = "redis-async"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/aden-q/redis-async"
description = "An async Redis client library and a Redis CLI built in Rust"
readme = "README.md"
keywords = ["redis", "async", "tokio"]

[[bin]]
name = "redis-async-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redis-async-server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
mini-redis = "0.4"
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
