[package]
name = "redis-async"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/aden-q/redis-async"
description = """
An asynchronous Redis client library and a Redis CLI built in Rust.
"""
readme = "README.md"
keywords = ["redis", "async", "tokio", "futures"]

[[bin]]
name = "redis-async-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
mini-redis = "0.4"
bytes = "1.10.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0"
serde_json = "1.0"
thiserror = "2"
anyhow = "1.0"
