[package]
name = "redis-asyncx"
version = "0.1.0"
edition = "2024"
license = "MIT"
homepage = "https://github.com/aden-q/redis-async"
repository = "https://github.com/aden-q/redis-async"
description = """
An asynchronous Redis client library and a Redis CLI built in Rust.
"""
readme = "README.md"
keywords = ["redis", "async", "tokio", "futures"]

[[bin]]
name = "redis-async-cli"
path = "src/bin/cli.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
bytes = "1.10.1"
thiserror = "2"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "3.0.2"
log = "0.4.27"
env_logger = "0.11.7"
signal-hook = "0.3.17"
colored = "3.0.0"
shlex = "1.3.0"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
testcontainers = "0.23.3"

[lints.clippy]
single_match = "warn"
single_match_else = "warn"
needless_match = "warn"
needless_late_init = "warn"
redundant_pattern_matching = "warn"
redundant_pattern = "warn"
redundant_guards = "warn"
collapsible_match = "warn"
match_single_binding = "warn"
match_same_arms = "warn"
match_ref_pats = "warn"
match_bool = "warn"
needless_bool = "deny"
unwrap_used = "warn"
expect_used = "warn"

[lints.rust]
unsafe_code = "forbid"
